--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-ui-router": "^1.0.0-beta.1",
-    "normalize.css": "^3.0.3"
+    "bootstrap": "^3.3.7",
+    "file-loader": "^0.9.0",
+    "normalize.css": "^3.0.3",
+    "url-loader": "^0.5.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
