--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-animate": "^1.5.8",
     "angular-ui-router": "^1.0.0-beta.1",
     "bootstrap": "^3.3.7",
     "file-loader": "^0.9.0",
