--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "angular": "^1.5.0",
     "angular-animate": "^1.5.8",
+    "angular-cookies": "^1.5.8",
     "angular-ui-router": "^1.0.0-beta.1",
     "bootstrap": "^3.3.7",
     "file-loader": "^0.9.0",
