--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "angular": "^1.5.0",
     "angular-animate": "^1.5.8",
     "angular-cookies": "^1.5.8",
+    "angular-local-storage": "^0.2.7",
+    "angular-toastr": "^2.1.1",
     "angular-ui-router": "^1.0.0-beta.1",
+    "babel-preset-es2017": "^6.14.0",
     "bootstrap": "^3.3.7",
     "file-loader": "^0.9.0",
     "normalize.css": "^3.0.3",
