changed test framework to jasmine

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "angular-ui-router": "^1.0.0-beta.1",
     "babel-preset-es2017": "^6.14.0",
     "bootstrap": "^3.3.7",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
     "normalize.css": "^3.0.3",
     "url-loader": "^0.5.7"
@@ -37,9 +38,13 @@
     "gulp-template": "^3.0.0",
     "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^1.7.0",
-    "karma": "^0.13.9",
+    "jasmine": "^2.4.1",
+    "jasmine-terminal-reporter": "^1.0.2",
+    "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
+    "karma-coverage": "^1.1.1",
+    "karma-jasmine": "^1.0.2",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
